# nonebot-plugin-liteyukibot

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
nonebot_plugin_liteyukibot/: __init__.py  manager.py
nonebot_plugin_liteyukibot/liteyuki_plugins/: lifespan_monitor.py
nonebot_plugin_liteyukibot/nonebot_sub_plugins/: liteyuki_pt.py
nonebot_plugin_liteyukibot/plugins/: lifespan_monitor.py  register_service.py
