[project]
name = "nonebot-plugin-liteyukibot"
version = "0.1.6"
description = "nonebot-plugin-liteyukibot"
readme = "README.md"
requires-python = ">=3.10, <4.0"
authors = [
    { name = "snowykami", email = "snowykami@outlook.com" }
]
dependencies = [
    "nonebot2>=2.3.3",
    "GitPython>=3.1.43",
    "aiohttp>=3.10.4",
    "liteyukibot>=6.3.6",
]

[tool.nonebot]
adapters = [

]
plugins = ["nonebot_plugin_liteyukibot"]
plugin_dirs = []
builtin_plugins = []


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
include_packages = ["liteyukibot"]